--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit>=1.26.0
-pandas>=2.1.0
-numpy>=1.26.0
+streamlit>=1.38.0
+pandas>=1.5.3
+numpy==1.24.3
 scikit-learn>=1.3.0
 matplotlib>=3.8.0
 plotly>=5.15.0
